<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/helloSPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/hello_spr"
        android:textColor="#41EAD6"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/powered"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:orientation="horizontal">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:id="@+id/target_ip"
            android:autofillHints="ip"
            android:hint="@string/ip"
            android:maxLines="1"
            android:inputType="none" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_200"
            android:text="@string/set"
            android:id="@+id/set_ip"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>


    <com.example.sprcontrollerkt.joystick.RockerView
        android:id="@+id/rockerView1"
        android:layout_width="215dp"
        android:layout_height="215dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        app:areaBackground="#6F858585"
        app:rockerBackground="@color/purple_200"
        app:rockerRadius="35dp" />

    <Button
        android:id="@+id/button_L"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/l"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_R"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/r"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="#6F858585">

        <Button
            android:id="@+id/button_B"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/purple_200"
            android:text="@string/b"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_A"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/purple_200"
            android:text="@string/a"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_Y"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/purple_200"
            android:text="@string/y"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_X"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="@color/purple_200"
            android:text="@string/x"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>